[package]
name = "carbonex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
color-eyre = "0.6.2"
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["release_max_level_info", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
